bug fix, max-width image stretched vertically in chrome

--- a/styles/main.css
+++ b/styles/main.css
@@ -723,6 +723,7 @@ section {
   margin: auto;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .github-icon {
